@@ -159,7 +159,8 @@ fi
 
 configure_mono=1
 build_mono=1
-mcs_path=../mcs
+mono_path=../mono
+mcs_path=../mono/mcs
 for arg; do
   case "$arg" in
     --with-manual-mono=yes | --with-manual-mono )
@@ -170,15 +171,21 @@ for arg; do
       configure_mono=0 ;;
     --with-mcs-path* )
       mcs_path=$(echo $arg|sed -e 's,.*=,,') ;;
+    --with-mono-path* )
+      mono_path=$(echo $arg|sed -e 's,.*=,,') ;;
   esac
 done
 
+if test ! -d $mono_path; then
+	mono_path=$mcs_path/..
+fi
+
 if [ $configure_mono -eq 1 ] ; then
-  if test -d $mcs_path/../mono; then
-    echo Running $mcs_path/../mono/autogen.sh ...
+  if test -d $mono_path; then
+    echo Running $mono_path/autogen.sh ...
     # we build --with-sgen=no to not build both boehm and sgen (and we build with boehm instead of sgen because sgen has a problem nobody has investigated much into yet)
-    (cd $mcs_path/../mono ; ./autogen.sh "$@" --with-moonlight=only --with-profile4=no --enable-minimal=aot,interpreter --with-ikvm-native=no --with-mcs-docs=no --disable-nls --disable-mono-debugger --with-sgen=no)
-    echo Done running $mcs_path/../mono/autogen.sh ...
+    (cd $mono_path/ ; ./autogen.sh "$@" --with-moonlight=only --with-profile4=no --enable-minimal=aot,interpreter --with-ikvm-native=no --with-mcs-docs=no --disable-nls --disable-mono-debugger --with-sgen=no)
+    echo Done running $mono_path/autogen.sh ...
   fi
 fi
 
