@@ -1,13 +1,13 @@
 if ONLY_BUILD_MONO
 all all-local:
-	$(MAKE) -C $(MCS_PATH)/../mono moon-do-build
+	$(MAKE) -C $(MONO_PATH) moon-do-build
 
 clean clean-local:
-	$(MAKE) -C $(MCS_PATH)/../mono moon-do-clean
+	$(MAKE) -C $(MONO_PATH) moon-do-clean
 
 else
 all all-local clean clean-local:
-	$(MAKE) -C $(MCS_PATH)/../mono $@
+	$(MAKE) -C $(MONO_PATH) $@
 
 endif
 
