@@ -1,3 +1,7 @@
+2010-07-23  Andreia Gaita  <avidigal@novell.com>
+
+	* Makefile.am: fix the mono build paths
+
 2010-04-08  Andreia Gaita  <avidigal@novell.com>
 
 	* Makefile.am: call moon-specific mono make rules to do fast mono
